# extra-plugins

./: .travis.yml  Makefile.am  README.md  Rules-po.mak  Rules_noxml-po.mak  build.sh  configure.ac  genmetaindex.py  updateallpo-multiOS.sh  updateallpo.sh  xml2po.py
.github/workflows/: extraplugins.yml
3GModemManager/po/: 3GModemManager.pot  de.po  sk.po
3GModemManager/src/: apnlist.xml  plugin.py
ABMCustomMixImporter/po/: ABMCustomMixImporter.pot  de.po  fr.po  lt.po  nl.po
ABMCustomMixImporter/src/: __init__.py  mixes.py  plugin.py
ADBVFD/src/: Makefile.am  plugin.py
AboutBoxBranding/src/: __init__.py  plugin.py
AnimationSetup/po/: AnimationSetup.pot
AttoVFDControl/meta/: Makefile.am  plugin_attovfdcontrol.xml
AttoVFDControl/po/: AttoVFDControl.pot  Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
AttoVFDControl/src/: Makefile.am  __init__.py  plugin.py
AudioEffect/po/: AudioEffect.pot
AudioEffect/src/: __init__.py  plugin.py
BTDevicesManager/CONTROL/: control
BTDevicesManager/po/: BTDevicesManager.pot  ca.po  de.po  el.po  es.po  fr.po  it.po  lt.po  nl.po  pt.po  sk.po
BTDevicesManager/src/: __init__.py  bluetoothctl.py  plugin.py
Blindscan/po/: Blindscan.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  zh_CN.po
Blindscan/src/: Makefile.am  __init__.py  dmmBlindScan.py  plugin.py
BrcmFRQ/src/: Makefile.am  plugin.py
CI/: build.sh
ChannelsImporter/po/: ChannelsImporter.pot  de.po  fr.po  it.po  lt.po  nl.po  pt.po
ChannelsImporter/src/: ChannelsImporter.py  FTPDownloader.py  __init__.py  plugin.py  scheduler.py
CuberevoVFD/src/: Makefile.am  plugin.py
CustomButtonAction/: plugin.py
CustomButtonAction/src/: Makefile.am  plugin.py
DLNABrowser/po/: DLNABrowser.pot  de.po
DLNABrowser/src/: plugin.py
DLNAServer/po/: DLNAServer.pot  ar.po  de.po  fr.po  it.po  lt.po  nl.po  pt.po  ru.po  uk.po
DLNAServer/src/: plugin.py
DMBlindscan/CONTROL/: control
DMBlindscan/meta/: Makefile.am  plugin_dmblindscan.xml
DMBlindscan/po/: Blindscan.pot  DMBlindscan.pot  Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  zh_CN.po
DMBlindscan/src/: Makefile.am  __init__.py  dmmBlindScan.py  plugin.py
DivXPlayer/: Makefile.am  plugin.py
DivXPlayer/src/: plugin.py
EPGTranslator/CONTROL/: control
EPGTranslator/meta/: plugin_epgtranslator.xml
EPGTranslator/po/: EPGTranslator.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
EPGTranslator/src/: AutoflushCache.py  HTML5Entities.py  Makefile.am  Skin_medium.py  Skin_small.py  __init__.py  plugin.py
EWVFDControl/CONTROL/: control
EWVFDControl/meta/: Makefile.am  plugin_ewvfdcontrol.xml
EWVFDControl/po/: EWVFDControl.pot  Makefile.am
EWVFDControl/src/: Makefile.am  __init__.py  plugin.py
F3LEDControl/CONTROL/: control
F3LEDControl/meta/: Makefile.am  plugin_f3ledcontrol.xml
F3LEDControl/po/: F3LEDControl.pot  Makefile.am
F3LEDControl/src/: Makefile.am  __init__.py  plugin.py
FPGAUpgrade/po/: FPGAUpgrade.pot
FPGAUpgrade/src/: __init__.py  plugin.py
FSBLUpdater/src/: Makefile.am
Fempa/po/: Fempa.pot  de.po
Fempa/src/: plugin.py
FirmwareUpgrade/po/: FirmwareUpgrade.pot  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
FirmwareUpgrade/src/: __init__.py  plugin.py
GBIpboxClient/po/: GBIpboxClient.pot  Makefile.am  de.po  it.po
GBIpboxClient/src/: GBIpboxAbout.py  GBIpboxClient.py  GBIpboxDownloader.py  GBIpboxLocale.py  GBIpboxMenu.py  GBIpboxMount.py  GBIpboxRemoteTimer.py  GBIpboxScan.py  GBIpboxTimer.py  GBIpboxWizard.py  Makefile.am  plugin.py
GigaBlueRemote/CONTROL/: control
GigaBlueRemote/meta/: Makefile.am  plugin_gigablueremote.xml
GigaBlueRemote/po/: GigaBlueRemote.pot  Makefile.am  ca.po  de.po  en.po  es.po  fi.po  fr.po  lt.po  nl.po  tr.po
GigaBlueRemote/src/: Makefile.am  __init__.py  plugin.py
GigaBlueVFDControl/CONTROL/: control
GigaBlueVFDControl/meta/: Makefile.am  plugin_gigabluevfdcontrol.xml
GigaBlueVFDControl/po/: GigaBlueVFDControl.pot  Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  (+16 more)
LCD4linux/src/data/: Makefile.am
LCD4linux/src/data/Clock11/: Makefile.am
LCD4linux/src/data/Clock12/: Makefile.am
LCD4linux/src/data/Clock13/: Makefile.am
LCD4linux/src/data/Clock14/: Makefile.am
LCD4linux/src/data/Clock15/: Makefile.am
LCD4linux/src/data/Clock16/: Makefile.am
LCD4linux/src/data/Clock17/: Makefile.am
LCD4linux/src/data/Clock18/: Makefile.am
LCD4linux/src/data/Clock19/: Makefile.am
LCD4linux/src/data/Clock20/: Makefile.am
LCD4linux/src/data/Clock21/: Makefile.am
LCD4linux/src/data/Clock22/: Makefile.am
LCD4linux/src/data/Clock23/: Makefile.am
LCD4linux/src/data/Clock24/: Makefile.am
LCD4linux/src/data/Clock25/: Makefile.am
LCD4linux/src/data/Clock26/: Makefile.am
LCD4linux/src/data/Clock27/: Makefile.am
LCD4linux/src/data/Clock28/: Makefile.am
SmartCardInfo/: Makefile.am  SmartCard.py  SmartCardATRInfoScreen.py  SmartCardPursesInfoScreen.py  SmartCardSelectDetailsScreen.py  SmartCardSubscriptionsInfoScreen.py  plugin.py
(+642 files in other folders)
