ACLOCAL_AMFLAGS = -I m4

SUBDIRS = ABMCustomMixImporter AboutBoxBranding AudioEffect Blindscan BTDevicesManager ChannelsImporter DLNABrowser DLNAServer DMBlindscan EPGTranslator EWVFDControl F3LEDControl Fempa FirmwareUpgrade FPGAUpgrade GBIpboxClient GigaBlueRemote GigaBlueVFDControl INIVFDControl LCD4linux MICOMUpgrade MultiTransCodingSetup OdinM7VFDControl OnDemand RCUSelect ReZap SatipClient SF8VFDControl SimpleFanControl StreamTV USBsafe TransCodingSetup TunerServer VentonFanControl VPLEDControl VuDuoFanControl WetekAudio WetekFRQ WetekSync VuRemote WirelessAccessPoint xmlUpdate XtrendFanControl XtrendRemote
