ACLOCAL_AMFLAGS = -I m4

SUBDIRS = ABMCustomMixImporter AboutBoxBranding AudioEffect Blindscan BTDevicesManager ChannelsImporter DLNABrowser DLNAServer DMBlindscan EPGTranslator EWVFDControl F3LEDControl Fempa GBIpboxClient GigaBlueRemote GigaBlueVFDControl IceTV INIVFDControl LCD4linux LCNScanner LEDBrightnessSetup MICOMUpgrade MiniTV MultiTransCodingSetup OdinM7VFDControl OnDemand OpentvZapper ProgrammlistenUpdater RCUSelect ReZap SABnzbdSetup SatipClient SF8VFDControl SH4MultiBoot SimpleFanControl StreamTV USBsafe TransCodingSetup TunerServer VentonFanControl VPLEDControl VuDuoFanControl WetekAudio WetekFRQ WetekSync VuRemote WirelessAccessPoint xmlUpdate XtrendFanControl XtrendRemote
