ACLOCAL_AMFLAGS = -I m4

SUBDIRS = ABMCustomMixImporter AboutBoxBranding AttoVFDControl AudioEffect Blindscan BTDevicesManager ChannelsImporter DLNABrowser DLNAServer DMBlindscan EPGTranslator EWVFDControl F3LEDControl Fempa GBIpboxClient GigaBlueRemote GigaBlueVFDControl IceTV INIVFDControl LCD4linux LCNScanner LEDBrightnessSetup MICOMUpgrade MiniTV MultiTransCodingSetup OdinM7VFDControl OnDemand OpentvZapper ProgrammlistenUpdater RCUSelect ReZap SABnzbdSetup SatipClient SF8VFDControl SH4MultiBoot SimpleFanControl StreamTV USBsafe TransCodingSetup TunerServer VentonFanControl VPLEDControl VuDuoFanControl WetekAudio WetekFRQ WetekSync VuRemote WirelessAccessPoint xmlUpdate XtrendFanControl XtrendRemote ADBVFD CuberevoVFD fs9000VFD hs742xVFD hs7110VFD hs7810aVFD hs8200VFD hs9510VFD opt9600VFD pace7241VFD spark7162VFD SparkUnionTunerType sparkVFD TopfieldVFD
