SUBDIRS = Clock1 Clock2 Clock3 Clock4 Clock5 Clock6 Clock7 Clock8 Clock9 Clock10 Clock11 Clock12 Clock13 Clock14 Clock15 Clock16 Clock17 Clock18 Clock19 Clock20 Clock21 Clock22 Clock23 Clock24 Clock25 Clock26 Clock27 Clock28

installdir = $(libdir)/enigma2/python/Plugins/Extensions/LCD4linux/data

install_DATA = *.png skin_data.xml default.lcd default.colorlcd220 default.colorlcd400 default.vuduo2 default.colorlcd720 default.colorlcd480 default.bwlcd255 default.colorlcd800
